# CIMVDL

./: .gitignore  Importing data_old.ipynb  create_tables.sql  dashboard.py  dashboardV2.py  personas.ipynb  preparacao_sql.ipynb  pyproject.toml  views.sql
